--- a/style.css
+++ b/style.css
@@ -1,17 +1,36 @@
+:root{
+    --default: #fff;
+    --bg-color: #fefae0 ;
+    --column-bg-color: #023047;
+    --text-color: #023047;
+} 
+
+html{
+    scroll-behavior: smooth;
+}
 body{
-    background-color: #fefae0 !important;
+    /* background-color: #fefae0 !important; */
+    background: var(--default);
     position: relative;
 }
 .navbar{
     position: fixed;
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
 h1, h2, h5{
     font-family: "Montserrat", sans-serif; 
-    color: #606c38;
+    /* color: #606c38; */
+    color: var(--text-color);
     font-weight: 600;
 }
 a{
     text-decoration: none;
+}
+p{
+    font-family: "Raleway", sans-serif;
 }
 strong{
     font-weight: 600;
@@ -23,14 +42,14 @@ li{
     position: relative;
 }
 ul li::marker{
-    color: #606c38bd;
+    color: #457b9d;
 }
 ul li:nth-child(1) .exp-details::before{
     content: "";
     top: -0.6em;
     position: absolute;
     display: block;
-    border: 1px solid #606c3863;
+    border: 1px solid #457b9d;
     rotate: 0deg;
     height: calc(100% - -1.9rem);
     left: calc(-1rem - 1px);
@@ -46,9 +65,7 @@ ul li:nth-child(1) .exp-details::before{
     left: calc(-1rem - 1px);
 } */
 
-p{
-    font-family: "Raleway", sans-serif;
-}
+
 .lhs{
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -57,16 +74,83 @@ p{
 }
 .lhs h2{
     font-size: 1.5rem;
-    color: #606c38;
+    /* color: #606c38; */
+    color: var(--text-color);
 }
 .lhs p{
     font-family: "Poppins", sans-serif;
     font-size: 0.8rem;
-    color: #606c38
+    /* color: #606c38 */
+    color: var(--text-color);
+}
+p.title{
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+.skills p, .awards p, .contact p, .location p {
+    font-size: 0.9rem;
+}
+.projects .content{
+    gap: 20px;
+}
+.projects .content img{
+    width: 300px;
+    border-radius: 10px;
+}
+.education p {
+    font-size: 1rem;
+}
+.projects .header p{
+    gap: 10px;
+    transition: 0.3s ease-in;
+    /* transition: transform 0.4s ease-in-out; */
+}
+.projects .header p:hover{
+    padding: 0.5rem;
+    background-color: #023047;
+    border-radius: 10px;
+    color: #fff;
+}
+.projects .header p img{
+    transition: transform 0.4s ease-in-out;
+}
+.projects .header p:hover img{
+    transform: rotate(360deg);
+    filter: invert(1);
+}
+.view-more-cta .btn, .resume-download{
+    padding: 10px 16px;
+    font-size: 1rem;
+    color: #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #023047;
+    font-family: "Raleway", sans-serif;
+    border: none;
+    transition: 0.5s ease-in-out;
+}
+.view-more-cta .btn:hover, .resume-download:hover{
+    background: #001722;
+
+}
+.view-more-cta .btn span{
+    display: none;
+}
+.view-more-cta .btn:hover span{
+    display: inline-block;
+}
+footer a{
+    text-decoration: none;
+    color: inherit;
+    transition: 0.5s ease-in-out;
+}
+footer a:hover{
+    font-weight: 600;
 }
 .sticky{
     height: 100vh;
-    background-color: #283618;
+    /* background-color: #283618; */
+    background-color: var(--column-bg-color);
     position: sticky;
     top: 0;
 }
@@ -82,10 +166,37 @@ p{
 .sticky img{
     border-radius: 10px;
 }
-.projects .content{
-    gap: 20px;
+
+
+
+/* Projects page css */
+
+.projects-grid{
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-template-columns: 4fr 3fr 3fr;
+    grid-template-rows: 1fr;
+    grid-row-gap: 2em;
+    column-gap: 2rem;
 }
-.projects .content img{
-    width: 200px;
-    border-radius: 10px;
+.grid{
+    border-radius: 2.5rem;
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 15rem;
+    padding: 2rem;
+    display: flex;
+    position: relative;
+    background-color: #fff;
+    color: #060633;
+    box-shadow: 0 20px 30px -10px rgb(16 16 39 / 7%);
+    text-wrap: balance;
+}
+.firstproject{
+    grid-area: 1 / 1 / 3 / 2;
+    padding: 3rem;
+}
+.secondproject{
+    grid-area: 1 / 2 / 2 / 4;
+    background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
 }
